--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 header {
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1604430456280-43f652c497aa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+  background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1604430456280-43f652c497aa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
   height: 100vh;
   background-size: cover;
   background-position: center;
@@ -46,7 +46,7 @@ ul li.active a {
 
 .title h1 {
   color: aliceblue;
-  font-size: 80px;
+  font-size: 70px;
 }
 
 .button {
@@ -74,4 +74,35 @@ ul li.active a {
   width: 100px;
   height: auto;
   margin-left: 16px;
+}
+
+.flex-container {
+  display: flex;
+  font-size: 30px;
+  text-align: center;
+  flex-direction: row;
+  margin: 30px;
+}
+
+.flex-item {
+  background-color: aquamarine;
+  padding: 15px;
+  margin: 10px;
+  flex: 50%;
+}
+
+
+@media (max-width: 800px){
+  .flex-container {
+    flex-direction: column;
+  }
+
+  .flex-item {
+    background-color: black;
+    color: white;
+  }
+
+  ul li a {
+    display: none;
+  }
 }
